--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI = "mongodb+srv://yavuz:gErltcGicveHc9O8@e-commerce.evj5vrl.mongodb.net/"
+MONGO_URI = "mongodb+srv://yavuz:gErltcGicveHc9O8@e-commerce.evj5vrl.mongodb.net/e-commerce"
